from 2.5.17 to 2.5.18
- fixed compilation issue in context where EA are not supported
- fixed typo in dar man page (--sequential-mode in place of
  --sequential-read)

from 2.5.16 to 2.5.17
- bug fix: dar failed to restore EA when file permission to restore
  did not included user write access. Fix consists in temporarily
  adding user write access in order to restore EA and removing this
  extra permission afterward if necessary
- updated FAQ
- fixed typos in dar man page
- fixed bug met when writing slices to a read-only filesystem
- fixed compilation problem under Solaris
- fixed typos in dar man page
- bug fix: self reporting bug in filtre.cpp line 2932 or 2925 depending
  or dar's version (report occurs in a normal but rare condition that
  was not imagined by developer, leading dar to abort the backup)
- bug fix: wrong evaluation of possibility to seek backward in the
  escape layer (layer managing tape marks) which lead to useless but
  harlmess skip trials in some rare conditions.

from 2.5.15 to 2.5.16
- bug fix: while rechecking sparse file (-ah option) during a merging
  operation, dar wrongly reported CRC mismatch for saved plain files
- fixed man page about sparse-file handling while merging: To remove
  sparse file datastructure during a merging operation you need to
  set --sparse-file-min-size to a valuer larger than all file sizes
  contained in the archive (for example 1E for one exabyte)
- bug fix: met when using compression and creating the archive to
  dar's standard output (ssh) and leading files to be corrupted in the
  archive and reported as such.
- optimisation of escape_sequence skippability (avoids trying skipping
  and failing for some corner cases, when we can detect it does even
  not worth trying)

from 2.5.14-bis to 2.5.15
- fixing self report bug message met when trying to create an isolated
  catalogue into a directory that does not exist
- adding slice overwriting verification before creating a isolated