@@ -1,6 +1,7 @@
 version 2.5.18
 --------------
-THanks to Christoph Anton Mitterer for feedback.
+Thanks to Christoph Anton Mitterer for feedback. Thanks to Michele for
+feedback about EA restoration possible improvement.
 
 version 2.5.17
 --------------
