@@ -79,20 +79,15 @@ namespace libdar
     inline static ssize_t my_llistxattr(const char *path, char *list, size_t size);
     inline static int     my_lremovexattr(const char *path, const char *name);
 
-
-    static bool write_ea(const string & chemin, const ea_attributs & val, const mask & filter);
     static bool remove_ea(const string & name, const ea_attributs & val, const mask & filter);
     static ea_attributs * read_ea(const string & name, const mask & filter, memory_pool *p);
     static vector<string> ea_filesystem_get_ea_list_for(const char *filename, memory_pool *p);
 #endif
+    static bool write_ea(const string & chemin, const ea_attributs & val, const mask & filter);
 
     bool ea_filesystem_write_ea(const string & chemin, const ea_attributs & val, const mask & filter)
     {
-#ifdef EA_SUPPORT
         return write_ea(chemin, val, filter);
-#else
-        throw Efeature(gettext(MSG_NO_EA_SUPPORT));
-#endif
     }
 
     ea_attributs * ea_filesystem_read_ea(const string & name, const mask & filter, memory_pool *p)
@@ -159,12 +154,13 @@ namespace libdar
 #endif
     }
 
-#ifdef EA_SUPPORT
-
     static bool write_ea(const string & chemin, const ea_attributs & val, const mask & filter)
     {
         U_I num = 0;
+#ifdef EA_SUPPORT
+	    // avoid unused variable compilation warning when EA_SUPPORT is not set
         const char *p_chemin = chemin.c_str();
+#endif
 	string key, value;
 
 	val.reset_read();
@@ -177,6 +173,8 @@ namespace libdar
 
 		// now, action !
 
+#ifdef EA_SUPPORT
+
 	    if(my_lsetxattr(p_chemin, key.c_str(), value.c_str(), value.size(), 0) < 0)
 	    {
 		string tmp = tools_strerror_r(errno);
@@ -185,14 +183,17 @@ namespace libdar
 	    }
 	    else
 		num++;
+#else
+	    throw Efeature(gettext(MSG_NO_EA_SUPPORT));
+#endif
 	}
 
 	return num > 0;
     }
 
+#ifdef EA_SUPPORT
     static bool remove_ea(const string & chemin, const ea_attributs & val, const mask & filter)
     {
-#ifdef EA_SUPPORT
         U_I num = 0;
         const char *p_chemin = chemin.c_str();
 	string key, value;
@@ -220,9 +221,6 @@ namespace libdar
 	}
 
         return num > 0;
-#else
-	return true;
-#endif
     }
 
     static ea_attributs * read_ea(const string & name, const mask & filter, memory_pool *p)
